welcome.lessons.welcome.array.array123.Array123.scala.error
array123:6: error: ';' expected but 'else' found.
	}else{
         ^